<resources>
    <string name="app_name">Не нажимай</string>

    <string name="vip_access">VIP доступ</string>
    <string name="switch_text">включи мультики\nпотяни шторку сверху\nи активируй блок экрана </string>
    <string name="free_day">%s дней бесплатно</string>
    <string name="instagram">VARENIK_VPUZE</string>
    <string name="pay">Купить подписку</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_image">Повторите рисунок</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="ok">ОК</string>
    <string name="on">Включить</string>
    <string name="off">Выключить</string>
    <string name="just_little">Осталось совсем чуть-чуть</string>
    <string name="warning_permission">Для работы приложения необходимо получить разрешение</string>
    <string name="warning_permission2">Для ние</string>
    <string name="error_permission">Разрешение не получено</string>
    <string name="error_subscription">Подписка закончилась. Пожалуйста продлите подписку</string>
    <string name="error_free_time">Время закончилось. До встречи завтра!</string>
    <string name="value_free_day">До конца пробного периода осталось %d дней</string>
    <string name="value_free_minute">Сегодня, у вас осталось %d минут</string>
    <string name="subscribe_now">Оформить подписку сейчас</string>
    <string name="month_subscription">99 р/месяц</string>
    <string name="year_subscription">990 р/год</string>
    <string name="month">/месяц</string>
    <string name="year">/год</string>
    <string name="description_pay">Если вы здесь, значит успели опробовать наше чудесное приложение.
        Мы создали его с любовью, исходя из личного опыта и потребностей.
        Нам оно кажется идеальным!
        Если ваш пробный период закончился, то есть возможность договориться с Варюшей о продлении пользования ее любимым приложением. Просто помоги ей накопить на новую игрушку! Подними настроение!</string>

    <string name="preview_book">От автора: почему я написала книгу «ПАПА БРОДЯГА»\n
        Чтобы сохранить память о Дмитрии Сивенкове — «Папе Бродяге», величайшем путешественнике,
        отважном мечтателе, сумасшедшем авантюристе, гражданине мира, который посвятил свою жизнь тому,
        чтобы нести добро, счастье и вдохновение, повествуя истории о нашей любви и путешествиях.
        Несмотря на то, что он пропал без вести в экспедиции на вулкане, его дух всегда остается с нами
        и заслуживает, чтобы его помнили. Хочу навсегда сохранить память о человеке,
        который научил меня мечтать, летать, любить, быть той, кем я сейчас являюсь.
        Я благодарна ему за все — он изменил мой мир и мою жизнь!</string>
    <string name="vip_forever">VIP НАВСЕГДА</string>
    <string name="listen_book">СЛУШАТЬ КНИГУ</string>
    <string name="audio_book">АУДИОКНИГА</string>
    <string name="audio_book_underline"><u>АУДИОКНИГА</u></string>
    <string name="promo_code">ввести промокод</string>

    <string name="everyday_text">Запусти приложение\n4 дня подряд\nи получи месяц\nБЕСПЛАТНОГО доступа</string>
    <string name="free_ten">10 мин в день</string>
    <string name="free_twenty">20 мин</string>
    <string name="free_hour">1 час</string>
    <string name="free_month">месяц бесплатно</string>
    <string name="further"><u>Дальше</u></string>
    <string name="back"><u>Назад</u></string>
    <string name="plus">+</string>
    <string name="for_month">НА МЕСЯЦ</string>
    <string name="for_year">НА ГОД</string>
    <string name="colon">:</string>

    <string name="block_touch">блокирует касания по экрану! Малыш не сможет случайно выключить мультики, стереть данные или позвонить</string>
    <string name="purchase_access">ПРИОБРЕСТИ\nДОСТУП</string>

    <string name="as_present_big">В ПОДАРОК</string>
    <string name="as_present">В подарок</string>
    <string name="new_user">новым пользователям</string>
    <string name="seven_days">7 дней</string>

    <string name="advantageous_offer">ВЫГОДНОЕ ПРЕДЛОЖЕНИЕ</string>
    <string name="end_promotion">ОСТАЛОСЬ ДО КОНЦА АКЦИИ</string>
    <!--УВЕДОМЛЕНИЯ -->
    <string name="touch">Нажмите для блокировки экрана</string>
    <string name="notification_channel_id" translatable="false">notification_channel_id</string>
    <string name="notification_channel_name">Активация сервиса</string>
    <string name="notification_channel_description">Уведомления для активации сервиса блокировки экрана, не отключайте это уведомления, для стабильной работы сервиса</string>
</resources>
