<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.aks.notpress.ui.everyday.EverydayViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/everyday_background_gradient">

        <ImageView
            android:id="@+id/iv_varenik"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_vareniki"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_52" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginStart="@dimen/margin_45"
                android:layout_marginEnd="@dimen/margin_45"
                android:layout_gravity="center"
                android:text="@string/everyday_text"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_36" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_60"
                android:layout_marginTop="@dimen/margin_45"
                android:paddingStart="@dimen/margin_10"
                android:includeFontPadding="false"
                android:clickable="false"
                android:button="@drawable/ic_check_box"
                android:textSize="@dimen/text_36"
                android:textColor="@android:color/white"
                android:text="@string/free_ten"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_60"
                android:paddingStart="@dimen/margin_10"
                android:includeFontPadding="false"
                android:clickable="false"
                android:button="@drawable/ic_check_box"
                android:textSize="@dimen/text_36"
                android:textColor="@android:color/white"
                android:text="@string/free_twenty"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_60"
                android:paddingStart="@dimen/margin_10"
                android:includeFontPadding="false"
                android:clickable="false"
                android:button="@drawable/ic_check_box"
                android:textSize="@dimen/text_36"
                android:textColor="@android:color/white"
                android:text="@string/free_hour"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_60"
                android:paddingStart="@dimen/margin_10"
                android:includeFontPadding="false"
                android:clickable="false"
                android:button="@drawable/ic_check_box"
                android:textSize="@dimen/text_36"
                android:textColor="@android:color/white"
                android:text="@string/free_month"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_25"
            android:text="@string/further"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_28"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>