<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.aks.notpress.ui.present.PresentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/present_background_gradient">

        <TextView
            android:id="@+id/tv_present"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25"
            android:text="@string/as_present"
            android:textSize="@dimen/text_52"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:shadowColor="@color/Black25"
            android:shadowDx="0"
            android:shadowDy="4"
            android:shadowRadius="8"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:shadowColor="@color/Black25"
            android:shadowDx="0"
            android:shadowDy="4"
            android:shadowRadius="8"
            android:textSize="@dimen/text_36"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_present"/>

        <ImageView
            android:id="@+id/iv_phone_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_60"
            android:src="@drawable/phone_heart"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_free_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_45"
            android:text="@string/seven_days"
            android:shadowColor="@color/Black25"
            android:shadowDx="0"
            android:shadowDy="4"
            android:shadowRadius="8"
            android:textSize="@dimen/text_36"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/iv_phone_heart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_25"
            android:text="@string/further"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_28"
            android:shadowColor="@color/Black25"
            android:shadowDx="0"
            android:shadowDy="4"
            android:shadowRadius="8"
            android:onClick="@{()->viewModel.onNext()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>