<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.aks.notpress.ui.password.PasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:textSize="@dimen/text_52"
            android:textColor="@android:color/white"
            bind:text="@{viewModel.textTitle}"
            tools:text="@string/enter_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <include
            android:id="@+id/items_password"
            layout="@layout/help_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_days"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            bind:viewModel="@{viewModel}"/>

        <Button
            android:id="@+id/bt_days"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_45"
            android:layout_marginEnd="@dimen/margin_45"
            android:layout_marginBottom="@dimen/margin_20"
            android:text="@string/save"
            android:onClick="@{()->viewModel.onSave()}"
            android:visibility="@{viewModel.isSaveVisible == true? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bt_delete" />

        <Button
            android:id="@+id/bt_delete"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_45"
            android:layout_marginEnd="@dimen/margin_45"
            android:layout_marginBottom="@dimen/margin_40"
            android:text="@string/delete"
            android:onClick="@{()->viewModel.onDelete()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            bind:background="@{@color/colorRed}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>