<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/book_background_gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_marginEnd="@dimen/margin_20"
                android:src="@drawable/ic_close"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/book"/>

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                layout="@layout/help_violet_button"
                android:layout_gravity="center"/>

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                layout="@layout/help_violet_button"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/vip_forever"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_36"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/listen_book"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_36"/>

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_25"
                android:padding="@dimen/margin_20"
                android:layout_margin="@dimen/margin_25"
                android:background="@drawable/help_background"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_28"
                android:text="@string/preview_book"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/ll"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>